cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

#add_executable(addtwonumbers AddTwoNumbers.cpp)
#add_executable(twosum TwoSum.cpp)
#add_executable(longestsubstringwithoutrepeatingcharacters LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(test test.cpp)
#add_executable(medianoftwosortedarrays MedianOfTwoSortedArrays.cpp)
#add_executable(longestpalindromicsubstring LongestPalindromicSubstring.cpp)
#add_executable(zigzagconversion ZigzagConversion.cpp)
#add_executable(reverseinteger ReverseInteger.cpp)
add_executable(stringtointegeratoi StringToIntegerAtoi.cpp)
add_executable(palindromenumber  PalindromeNumber.cpp)